# asyncapi-rust-ws-template

./: .gitignore  CHANGELOG.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
hooks/: after.js  before.js
sample/: v3.yaml
src/: Cargo.toml.ts  Cargo.toml.tsx  README.md.tsx  fetchRemoteConfig.ts  format.ts  generate.ts  global.d.ts  index.js  index.ts  index.tsx  main.rs.ts  render.ts  renderCargo.ts  renderChannel.ts  renderClient.ts  renderClientFn.ts  renderFile.ts  renderLib.ts  renderModel.ts  renderReadMe.ts  rmeote_file.ts  tool.ts  tool.tsx  validate.ts  validateEssential.ts  validateFull.ts  validate_essential.ts  validate_full.ts
src/_render/: Cargo.toml.ts  README.md.ts  _channel.ts  _client.ts  _server.ts  lib.rs.ts  main.rs.ts  tool.ts  tool.tsx
src/render/: Cargo.toml.ts  README.md.ts  _server.ts
src/src/client/: _client.ts
src/src/model/: _model.ts
template/: Cargo.toml  Cargo.toml.js  README.md  README.md.js  format.d.ts  format.js  generate.js  index.d.ts  index.js  index.ts  main.rs.js  remote_file.d.ts  render.d.ts  render.js  rmeote_file.js  tool.js  validate.js  validate_essential.js  validate_full.d.ts  validate_full.js
template/_render/: Cargo.toml.d.ts  Cargo.toml.js  README.md.d.ts  README.md.js  _channel.js  _client.js  _server.js  lib.rs.d.ts  lib.rs.js  main.rs.js  tool.d.ts  tool.js
template/render/: Cargo.toml.js  README.md.js  _server.js
template/src/client/: _client.d.ts  _client.js
template/src/model/: _model.d.ts  _model.js
test/input/: v2.yaml  v3.yaml
