[package]
name = "exchange-collection-{{'protocol'}}-{{'exchange'}}"
version = "1.1.0"
edition = "2021"

[dependencies.reqwest]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.serde_yaml]
workspace = true

[dependencies.url]
workspace = true
